--- a/package.json
+++ b/package.json
@@ -8,11 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-keyboard-aware-scroll-view": "0.9.2",
+    "react-native-navigation": "6.11.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-native-size-matters": "0.3.0",
+    "react-native-status-bar-height": "2.5.0",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
     "socket.io-client": "2.3.0"
   },
